# madison

./: .gitignore  ACCURACY-REVIEW.md  AGENTS.md  CLAUDE.md  DATA_CONTRACT.md  DOMAIN.md  LICENSE.md  README.md  TIKTOC.md  architecture.md  book.md  build.sh  chapters-spec.md  cover.jpg.placeholder  enrichment-log.md  graphs.sh  metadata.yaml  outline.md  package.json  risks.md  vision.md
.claude/: settings.json
brand/: brand.yml  gaps.md  media-research.md  media-target-map.md  resume.json
brutalist/: D3.md  DESIGN.md  PROJECT.md  SLIDES.md  SaulBass.md  VIZ.md
chapters/: 00-frontmatter.md  00-introduction.md  01-introduction.md  (+22 more)
scripts/madison-main/brandguide.ai/backend/: pyproject.toml
scripts/madison-main/brandguide.ai/backend/src/: api.py  asset_classifier.py  brand_auditor.py  brand_guideline_extractor.py  brand_guideline_generator.py  config.py  database.py  layout_classifier.py  logging_conf.py  middleware.py  migrate.py  models.py  utils.py
scripts/madison-main/brandguide.ai/backend/src/services/: ml_service.py
scripts/madison-main/brandguide.ai/backend/src/typography/: auditor.py  font_renderer.py  siamese_manager.py  siamese_model.py
scripts/madison-main/brandguide.ai/backend/tests/: debug_text_audit.py  test_async_responsiveness.py  test_brand_auditor_thread_safety.py  test_color_audit.py  test_extraction.py  test_integration.py  test_layout_classifier.py  test_mlservice_thread_safety.py  test_siamese_manager_thread_safety.py  test_smart_audit.py  test_tolerance.py
scripts/madison-main/brandguide.ai/backend/tests/typography/: test_auditor.py
(+842 files in other folders)
